Closed
Bug 642254
Opened 15 years ago
Closed 15 years ago
TI: Assertion failure: !fe->isTypeKnown(), at ./methodjit/Compiler.cpp:5702
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: decoder, Unassigned)
References
Details
(Keywords: assertion, testcase, Whiteboard: fixed-in-jaegermonkey)
The following test case (run with -n -a -m) asserts on TI tip (tested on 64
bit):
function f(i) {
for (var n = 0; n < 100; n = i);
}
print(actual = f(.5));
Comment 1•15 years ago
|
||
Bogus assert, when restoring analysis types entries which are known doubles may already have had that info set when they were given an FP register.
http://hg.mozilla.org/projects/jaegermonkey/rev/b3c0144afa64
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-jaegermonkey
| Reporter | ||
Comment 2•13 years ago
|
||
A testcase for this bug was automatically identified at js/src/jit-test/tests/basic/bug642254.js.
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•