[INFER] Fix bogus assert when restoring analysis types, bug 642254.