js/src/jit-test/tests/basic/bug642254.js
@@ -1,0 +1,4 @@
+function f(i) {
+  for (var n = 0; n < 0; n = i) { }
+}
+actual = f(.5);
